k8s/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: chatapp

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
